--- a/money/Info.plist
+++ b/money/Info.plist
@@ -6,6 +6,7 @@
 	<array>
 		<string>Moderniz.otf</string>
 		<string>Nexa-ExtraLight.ttf</string>
+		<string>Nexa-Heavy.ttf</string>
 	</array>
 </dict>
 </plist>
